--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -55,6 +55,17 @@ jobs:
             gcc-10 \
             g++-10
 
+      - name: Building/Installing LLVM
+        run: |
+          sudo apt update -qq
+          sudo apt install -y \
+            libllvm12 \
+            llvm-12 \
+            llvm-12-dev \
+            llvm-12-runtime \
+            liblld-12 \
+            liblld-12-dev
+
       - name: Configure CMake
         run: |
           export CC=${{ matrix.config.cc }}
