--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -55,9 +55,8 @@ jobs:
             gcc-10 \
             g++-10
 
-      - name: Building/Installing LLVM
+      - name: Installing LLVM
         run: |
-          sudo apt update -qq
           sudo apt install -y \
             libllvm12 \
             llvm-12 \
