--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -40,22 +40,15 @@ jobs:
         run: |
           git clone https://github.com/llvm/llvm-project/ --branch llvmorg-13.0.0 --single-branch --depth=1
           cd llvm-project
-          cmake \
-            -S llvm \
-            -B build \
-            -D CMAKE_BUILD_TYPE=${{ matrix.config.build_type }} \
-            -D CMAKE_CXX_FLAGS="/MP" \
-            -D LLVM_ENABLE_PROJECTS="llvm;lld" \
-            -D LLVM_TARGETS_TO_BUILD="X86" \
-            -T host=x64
-          cmake --build build --target install
+          cmake -S llvm -B build -D CMAKE_BUILD_TYPE=${{ matrix.config.build_type }} -D LLVM_PARALLEL_LINK_JOBS=1 -D LLVM_ENABLE_PROJECTS="llvm;lld" -D LLVM_TARGETS_TO_BUILD="X86" -T host=x64 ${{ matrix.config.cmake_configure_options }}
+          cmake --build build --target install ${{ matrix.config.cmake_build_options }}
 
       - name: Configure CMake
         run: |
           set CC=${{ matrix.config.cc }}
           set CXX=${{ matrix.config.cxx }}
 
-          cmake . -Bbuild -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }}
+          cmake . -Bbuild -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }} ${{ matrix.config.cmake_configure_options }}
 
       - name: Build
         run: |
