--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -18,7 +18,7 @@ jobs:
             cc: "cl",
             cxx: "cl",
             cmake_build_options: "--config Debug",
-            cmake_configure_options: '-G "Visual Studio 16 2019" -A x64',
+            cmake_configure_options: '-G "Ninja"',
             build_type: "Debug"
           }
           - {
@@ -27,7 +27,7 @@ jobs:
             cc: "cl",
             cxx: "cl",
             cmake_build_options: "--config Release",
-            cmake_configure_options: '-G "Visual Studio 16 2019" -A x64',
+            cmake_configure_options: '-G "Ninja"',
             build_type: "Release"
           }
     steps:
@@ -40,7 +40,7 @@ jobs:
         run: |
           git clone https://github.com/llvm/llvm-project/ --branch llvmorg-13.0.0 --single-branch --depth=1
           cd llvm-project
-          cmake -S llvm -B build -D CMAKE_BUILD_TYPE=${{ matrix.config.build_type }} -D CMAKE_CXX_FLAGS="/MP" -D LLVM_PARALLEL_LINK_JOBS=1 -D LLVM_ENABLE_PROJECTS="llvm;lld" -D LLVM_TARGETS_TO_BUILD="X86" -T host=x64 ${{ matrix.config.cmake_configure_options }}
+          cmake -S llvm -B build -D CMAKE_BUILD_TYPE=${{ matrix.config.build_type }} -D LLVM_ENABLE_PROJECTS="llvm;lld" -D LLVM_TARGETS_TO_BUILD="X86" ${{ matrix.config.cmake_configure_options }}
           cmake --build build --target install ${{ matrix.config.cmake_build_options }}
 
       - name: Configure CMake
