--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -41,11 +41,22 @@ jobs:
           choco install ninja
           ninja --version
 
+    - name: Adding msbuild to PATH
+      uses: microsoft/setup-msbuild@v1.0.1
+
       - name: Building & Installing LLVM
         run: |
           git clone https://github.com/llvm/llvm-project/ --branch llvmorg-13.0.0 --single-branch --depth=1
           cd llvm-project
-          cmake -S llvm -B build -D CMAKE_BUILD_TYPE=${{ matrix.config.build_type }} -D LLVM_ENABLE_PROJECTS="llvm;lld" -D LLVM_TARGETS_TO_BUILD="X86" ${{ matrix.config.cmake_configure_options }}
+          cmake ^
+            -S llvm ^
+            -B build ^
+            -D CMAKE_C_COMPILER=cl ^
+            -D CMAKE_CXX_COMPILER=cl ^
+            -D CMAKE_BUILD_TYPE=${{ matrix.config.build_type }} ^
+            -D LLVM_ENABLE_PROJECTS="llvm;lld" ^
+            -D LLVM_TARGETS_TO_BUILD="X86" ^
+            ${{ matrix.config.cmake_configure_options }}
           cmake --build build --target install ${{ matrix.config.cmake_build_options }}
 
       - name: Configure CMake
