General: Changing actions

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -41,8 +41,10 @@ jobs:
           choco install ninja
           ninja --version
 
-      - name: Adding msbuild to PATH
-        uses: microsoft/setup-msbuild@v1.1
+      - name: Adding MSVC to PATH
+      - uses: ilammy/msvc-dev-cmd@v1
+        with:
+          msbuild-architecture: x64
 
       - name: Building & Installing LLVM
         run: |
