--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -4,7 +4,8 @@ on: [ push, pull_request ]
 
 jobs:
   build-windows:
-    runs-on: windows-latest
+    runs-on: windows-2022
+    timeout-minutes: 600
     defaults:
       run:
         shell: cmd
@@ -18,7 +19,7 @@ jobs:
             cc: "cl",
             cxx: "cl",
             cmake_build_options: "--config Debug",
-            cmake_configure_options: '-G "Ninja"',
+            cmake_configure_options: '-G "Visual Studio 17 2022" -A x64',
             build_type: "Debug"
           }
           - {
@@ -27,7 +28,7 @@ jobs:
             cc: "cl",
             cxx: "cl",
             cmake_build_options: "--config Release",
-            cmake_configure_options: '-G "Ninja"',
+            cmake_configure_options: '-G "Visual Studio 17 2022" -A x64',
             build_type: "Release"
           }
     steps:
@@ -36,14 +37,6 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Installing Ninja
-        run: |
-          choco install ninja
-          ninja --version
-
-      - name: Adding MSVC to PATH
-        uses: ilammy/msvc-dev-cmd@v1
-
       - name: Building & Installing LLVM
         run: |
           git clone https://github.com/llvm/llvm-project/ --branch llvmorg-13.0.0 --single-branch --depth=1
@@ -51,11 +44,11 @@ jobs:
           cmake ^
             -S llvm ^
             -B build ^
-            -D CMAKE_C_COMPILER=${{ matrix.config.cc }} ^
-            -D CMAKE_CXX_COMPILER=${{ matrix.config.cxx }} ^
             -D CMAKE_BUILD_TYPE=${{ matrix.config.build_type }} ^
+            -D LLVM_PARALLEL_LINK_JOBS=1
             -D LLVM_ENABLE_PROJECTS="llvm;lld" ^
             -D LLVM_TARGETS_TO_BUILD="X86" ^
+            -T host=x64
             ${{ matrix.config.cmake_configure_options }}
           cmake --build build --target install ${{ matrix.config.cmake_build_options }}
 
