--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -42,6 +42,7 @@ jobs:
           git clone https://github.com/llvm/llvm-project/ --branch llvmorg-13.0.0 --single-branch --depth=1
           cd llvm-project
           cmake ^
+            ${{ matrix.config.cmake_configure_options }} ^
             -S llvm ^
             -B build ^
             -D CMAKE_BUILD_TYPE=${{ matrix.config.build_type }} ^
@@ -49,19 +50,28 @@ jobs:
             -D LLVM_ENABLE_PROJECTS="llvm;lld" ^
             -D LLVM_TARGETS_TO_BUILD="X86" ^
             -T host=x64
-            ${{ matrix.config.cmake_configure_options }}
-          cmake --build build --target install ${{ matrix.config.cmake_build_options }}
+          cmake ^
+            ${{ matrix.config.cmake_build_options }} ^
+            --build build ^
+            --target install
 
       - name: Configure CMake
         run: |
           set CC=${{ matrix.config.cc }}
           set CXX=${{ matrix.config.cxx }}
 
-          cmake . -Bbuild -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }} ${{ matrix.config.cmake_configure_options }}
+          cmake ^
+             ${{ matrix.config.cmake_configure_options }} ^
+            -S .
+            -B build ^
+            -D CMAKE_BUILD_TYPE=${{ matrix.config.build_type }} ^
+            -T host=x64
 
       - name: Build
         run: |
-          cmake --build build ${{ matrix.config.cmake_build_options }}
+          cmake ^
+             ${{ matrix.config.cmake_build_options }} ^
+            --build build
 
       - name: Prepare upload
         run: |
