--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -70,15 +70,15 @@ jobs:
           export CC=${{ matrix.config.cc }}
           export CXX=${{ matrix.config.cxx }}
 
-          cmake ^
-            -S . ^
-            -B build ^
+          cmake \
+            -S . \
+            -B build \
             -D CMAKE_BUILD_TYPE=${{ matrix.config.build_type }}
 
       - name: Build
         run: |
-          cmake ^
-            --build build ^
+          cmake \
+            --build build \
             --parallel $(nproc)
 
       - name: Prepare upload
