--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -43,13 +43,13 @@ jobs:
           cd llvm-project
           cmake ^
             ${{ matrix.config.cmake_configure_options }} ^
+            -Thost=x64
             -S llvm ^
             -B build ^
             -D CMAKE_BUILD_TYPE=${{ matrix.config.build_type }} ^
             -D LLVM_PARALLEL_LINK_JOBS=1
             -D LLVM_ENABLE_PROJECTS="llvm;lld" ^
             -D LLVM_TARGETS_TO_BUILD="X86" ^
-            -T host=x64
           cmake ^
             ${{ matrix.config.cmake_build_options }} ^
             --build build ^
@@ -61,11 +61,9 @@ jobs:
           set CXX=${{ matrix.config.cxx }}
 
           cmake ^
-             ${{ matrix.config.cmake_configure_options }} ^
+            ${{ matrix.config.cmake_configure_options }} ^
             -S .
-            -B build ^
-            -D CMAKE_BUILD_TYPE=${{ matrix.config.build_type }} ^
-            -T host=x64
+            -B build
 
       - name: Build
         run: |
