--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -19,7 +19,7 @@ jobs:
             cc: "cl",
             cxx: "cl",
             cmake_build_options: "--config Debug",
-            cmake_configure_options: '-G "Visual Studio 17 2022" -A x64',
+            cmake_configure_options: '-G "Visual Studio 17 2022" -A x64 -T host=x64',
             build_type: "Debug"
           }
           - {
@@ -28,7 +28,7 @@ jobs:
             cc: "cl",
             cxx: "cl",
             cmake_build_options: "--config Release",
-            cmake_configure_options: '-G "Visual Studio 17 2022" -A x64',
+            cmake_configure_options: '-G "Visual Studio 17 2022" -A x64 -T host=x64',
             build_type: "Release"
           }
     steps:
@@ -41,36 +41,19 @@ jobs:
         run: |
           git clone https://github.com/llvm/llvm-project/ --branch llvmorg-13.0.0 --single-branch --depth=1
           cd llvm-project
-          cmake ^
-            -S llvm ^
-            -B build ^
-            -D CMAKE_BUILD_TYPE=${{ matrix.config.build_type }} ^
-            -D LLVM_PARALLEL_LINK_JOBS=1
-            -D LLVM_ENABLE_PROJECTS="llvm;lld" ^
-            -D LLVM_TARGETS_TO_BUILD="X86" ^
-            -T host=x64 ^
-            ${{ matrix.config.cmake_configure_options }} ^
-
-          cmake ^
-            --build build ^
-            --target install ^
-            ${{ matrix.config.cmake_build_options }}
+          cmake -S llvm -B build -D CMAKE_BUILD_TYPE=${{ matrix.config.build_type }} -D LLVM_PARALLEL_LINK_JOBS=1 -D LLVM_ENABLE_PROJECTS="llvm;lld" -D LLVM_TARGETS_TO_BUILD="X86" ${{ matrix.config.cmake_configure_options }}
+          cmake --build build --target install ${{ matrix.config.cmake_build_options }}
 
       - name: Configure CMake
         run: |
           set CC=${{ matrix.config.cc }}
           set CXX=${{ matrix.config.cxx }}
 
-          cmake ^
-            -S . ^
-            -B build ^
-            ${{ matrix.config.cmake_configure_options }}
+          cmake -S . -B build ${{ matrix.config.cmake_configure_options }}
 
       - name: Build
         run: |
-          cmake ^
-            --build build ^
-             ${{ matrix.config.cmake_build_options }}
+          cmake --build build ${{ matrix.config.cmake_build_options }}
 
       - name: Prepare upload
         run: |
