--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -37,11 +37,14 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Building & Installing LLVM
+      - name: Cloning LLVM
         run: |
           mkdir C:/llvm-project
           git clone https://github.com/llvm/llvm-project/ C:/llvm-project --branch llvmorg-13.0.0 --single-branch --depth=1
-          cd C:/llvm-project
+
+      - name: Building & Installing LLVM
+        working-directory: C:/llvm-project
+        run: |
           cmake -S llvm -B build -D CMAKE_BUILD_TYPE=${{ matrix.config.build_type }} -D LLVM_PARALLEL_LINK_JOBS=1 -D LLVM_ENABLE_PROJECTS="llvm;lld" -D LLVM_TARGETS_TO_BUILD="X86" ${{ matrix.config.cmake_configure_options }}
           cmake --build build --target install ${{ matrix.config.cmake_build_options }}
 
