--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -41,21 +41,19 @@ jobs:
 
       - name: Cache
         uses: actions/cache@v2
-        env:
-          cache-name: cache-llvm-source
+        id: llvm-source-cache
         with:
-          path: |
-            ${{ env.llvm_path }}
-          key: ${{ runner.os }}-${{ matrix.config.build_type }}-${{ hashFiles('CMakeLists.txt') }}
+          path: ${{ env.llvm_path }}
+          key: ${{ runner.os }}-${{ matrix.config.build_type }}
 
       - name: Cloning LLVM
-        if: steps.cache-llvm-source.outputs.cache-hit != 'true'
+        if: steps.llvm-source-cache.outputs.cache-hit != 'true'
         run: |
           git clone https://github.com/llvm/llvm-project/ ${{ env.llvm_path }} --branch llvmorg-13.0.0 --single-branch --depth=1
 
       - name: Configuring & Building
         working-directory: ${{ env.llvm_path }}
-        if: steps.cache-llvm-source.outputs.cache-hit != 'true'
+        if: steps.llvm-source-cache.outputs.cache-hit != 'true'
         run: |
           cmake -S llvm -B build -D CMAKE_BUILD_TYPE=${{ matrix.config.build_type }} -D LLVM_PARALLEL_LINK_JOBS=1 -D LLVM_ENABLE_PROJECTS="llvm;lld" -D LLVM_TARGETS_TO_BUILD="X86" ${{ matrix.config.cmake_configure_options }}
           cmake --build build --target ALL_BUILD ${{ matrix.config.cmake_build_options }}
