--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -11,6 +11,7 @@ jobs:
         shell: cmd
     env:
       llvm_path: "C:/llvm-project"
+      llvm_build_path: "C:/llvm-project/build"
     strategy:
       fail-fast: false
       matrix:
@@ -43,7 +44,7 @@ jobs:
         uses: actions/cache@v2
         id: llvm-source-cache
         with:
-          path: ${{ env.llvm_path }}
+          path: ${{ env.llvm_build_path }}
           key: ${{ runner.os }}-${{ matrix.config.build_type }}-${{ hashFiles('.github/workflows/build-windows.yml') }}
 
       - name: Cloning LLVM
