--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -10,8 +10,8 @@ jobs:
       run:
         shell: cmd
     env:
-      llvm_path: "C:/llvm-project"
-      llvm_build_path: "C:/llvm-project/build"
+      llvm_source_path: "C:/llvm-project-source"
+      llvm_build_path: "C:/llvm-project-build"
     strategy:
       fail-fast: false
       matrix:
@@ -42,32 +42,32 @@ jobs:
 
       - name: Cache
         uses: actions/cache@v2
-        id: llvm-source-cache
+        id: llvm-build-cache
         with:
           path: ${{ env.llvm_build_path }}
           key: ${{ runner.os }}-${{ matrix.config.build_type }}-${{ hashFiles('.github/workflows/build-windows.yml') }}
 
       - name: Cloning LLVM
-        if: steps.llvm-source-cache.outputs.cache-hit != 'true'
+        if: steps.llvm-build-cache.outputs.cache-hit != 'true'
         run: |
-          git clone https://github.com/llvm/llvm-project/ ${{ env.llvm_path }} --branch llvmorg-13.0.0 --single-branch --depth=1
+          git clone https://github.com/llvm/llvm-project/ ${{ env.llvm_source_path }} --branch llvmorg-13.0.0 --single-branch --depth=1
 
       - name: Configuring LLVM
-        working-directory: ${{ env.llvm_path }}
-        if: steps.llvm-source-cache.outputs.cache-hit != 'true'
+        working-directory: ${{ env.llvm_source_path }}
+        if: steps.llvm-build-cache.outputs.cache-hit != 'true'
         run: |
-          cmake -S llvm -B build -D CMAKE_BUILD_TYPE=${{ matrix.config.build_type }} -D LLVM_PARALLEL_LINK_JOBS=1 -D LLVM_BUILD_TOOLS=OFF -D LLVM_ENABLE_ASSERTIONS=OFF -D LLVM_ENABLE_DIA_SDK=OFF -D LLVM_INCLUDE_BENCHMARKS=OFF -D LLVM_INCLUDE_EXAMPLES=OFF -D LLVM_INCLUDE_TESTS=OFF -D LLVM_INCLUDE_TOOLS=OFF -D LLVM_ENABLE_PROJECTS="llvm;lld" -D LLVM_TARGETS_TO_BUILD="X86" ${{ matrix.config.cmake_configure_options }}
+          cmake -S ${{ env.llvm_source_path }}/llvm -B ${{ env.llvm_build_path }} -D CMAKE_BUILD_TYPE=${{ matrix.config.build_type }} -D LLVM_PARALLEL_LINK_JOBS=1 -D LLVM_BUILD_TOOLS=OFF -D LLVM_ENABLE_ASSERTIONS=OFF -D LLVM_ENABLE_DIA_SDK=OFF -D LLVM_INCLUDE_BENCHMARKS=OFF -D LLVM_INCLUDE_EXAMPLES=OFF -D LLVM_INCLUDE_TESTS=OFF -D LLVM_INCLUDE_TOOLS=OFF -D LLVM_ENABLE_PROJECTS="llvm;lld" -D LLVM_TARGETS_TO_BUILD="X86" ${{ matrix.config.cmake_configure_options }}
 
       - name: Building LLVM
-        working-directory: ${{ env.llvm_path }}
-        if: steps.llvm-source-cache.outputs.cache-hit != 'true'
+        working-directory: ${{ env.llvm_build_path }}
+        if: steps.llvm-build-cache.outputs.cache-hit != 'true'
         run: |
-          cmake --build build --target ALL_BUILD ${{ matrix.config.cmake_build_options }}
+          cmake --build ${{ env.llvm_build_path }} --target ALL_BUILD ${{ matrix.config.cmake_build_options }}
 
       - name: Installing LLVM
-        working-directory: ${{ env.llvm_path }}
+        working-directory: ${{ env.llvm_build_path }}
         run: |
-          cmake --build build --target INSTALL ${{ matrix.config.cmake_build_options }}
+          cmake --build ${{ env.llvm_build_path }} --target INSTALL ${{ matrix.config.cmake_build_options }}
 
       - name: Configure CMake
         run: |
