--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,11 @@ enable_sanitizers(ProjectOptions)
 include(Development/CMake/StaticAnalyzers.cmake)
 
 #-------------------------------------------------------------------------------------------
+# Options
+#-------------------------------------------------------------------------------------------
+option(HYPER_USE_LLVM "Using LLVM as backend" ON)
+
+#-------------------------------------------------------------------------------------------
 # Source
 #-------------------------------------------------------------------------------------------
 add_subdirectory(Source)
