--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -50,7 +50,7 @@ jobs:
         run: |
           sudo apt update -qq
           sudo apt install -y \
-            clang-10 \
+            clang-12 \
             cmake \
             gcc-10 \
             g++-10
@@ -73,7 +73,8 @@ jobs:
           cmake \
             -S . \
             -B build \
-            -D CMAKE_BUILD_TYPE=${{ matrix.config.build_type }}
+            -D CMAKE_BUILD_TYPE=${{ matrix.config.build_type }} \
+            -D LLVM_DIR=/usr/lib/llvm-12/cmake
 
       - name: Build
         run: |
