Linker: Adding linking

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -45,25 +45,23 @@ llvm_map_components_to_libnames(llvm_libs ${LLVM_LINK_COMPONENTS})
 find_library(LLD_COFF NAMES lldCOFF.a liblldCOFF.a lldCOFF.lib PATHS ${LLVM_LIBRARY_DIRS})
 find_library(LLD_COMMON NAMES lldCommon.a liblldCommon.a lldCommon.lib PATHS ${LLVM_LIBRARY_DIRS})
 find_library(LLD_CORE NAMES lldCore.a liblldCore.a lldCore.lib PATHS ${LLVM_LIBRARY_DIRS})
-find_library(LLD_WASM NAMES lldWasm.a liblldWasm.a lldWasm.lib PATHS ${LLVM_LIBRARY_DIRS})
-find_library(LLD_MINGW NAMES lldMinGW.a liblldMinGW.a lldMinGW.lib PATHS ${LLVM_LIBRARY_DIRS})
-find_library(LLD_ELF NAMES lldELF.a liblldELF.a lldELF.lib PATHS ${LLVM_LIBRARY_DIRS})
 find_library(LLD_DRIVER NAMES lldDriver.a liblldDriver.a lldDriver.lib PATHS ${LLVM_LIBRARY_DIRS})
+find_library(LLD_ELF NAMES lldELF.a liblldELF.a lldELF.lib PATHS ${LLVM_LIBRARY_DIRS})
+find_library(LLD_MINGW NAMES lldMinGW.a liblldMinGW.a lldMinGW.lib PATHS ${LLVM_LIBRARY_DIRS})
 find_library(LLD_READER_WRITER NAMES lldReaderWriter.a liblldReaderWriter.a lldReaderWriter.lib PATHS ${LLVM_LIBRARY_DIRS})
-find_library(LLD_MACHO NAMES lldMachO.a liblldMachO.a lldMachO.lib PATHS ${LLVM_LIBRARY_DIRS})
+find_library(LLD_WASM NAMES lldWasm.a liblldWasm.a lldWasm.lib PATHS ${LLVM_LIBRARY_DIRS})
 find_library(LLD_YAML NAMES lldYAML.a liblldYAML.a lldYAML.lib PATHS ${LLVM_LIBRARY_DIRS})
 
 set(lld_libs
         ${LLD_COFF}
         ${LLD_COMMON}
-        ${LLD_WASM}
-        ${LLD_MINGW}
-        ${LLD_ELF}
+        ${LLD_CORE}
         ${LLD_DRIVER}
+        ${LLD_ELF}
+        ${LLD_MINGW}
         ${LLD_READER_WRITER}
-        ${LLD_MACHO}
-        ${LLD_YAML}
-        ${LLD_CORE})
+        ${LLD_WASM}
+        ${LLD_YAML})
 
 #-------------------------------------------------------------------------------------------
 # Hyper
@@ -74,6 +72,7 @@ set(SOURCES
         src/Hyper/DataType.cpp
         src/Hyper/Diagnostics.cpp
         src/Hyper/Generator.cpp
+        src/Hyper/Linker.cpp
         src/Hyper/Parser.cpp
         src/Hyper/Scanner.cpp
         src/Hyper/Token.cpp
@@ -104,8 +103,9 @@ set(HEADERS
         include/Hyper/Compiler.hpp
         include/Hyper/DataType.hpp
         include/Hyper/Diagnostics.hpp
-        include/Hyper/Generator.hpp
         include/Hyper/Formatter.hpp
+        include/Hyper/Generator.hpp
+        include/Hyper/Linker.hpp
         include/Hyper/Logger.hpp
         include/Hyper/Parser.hpp
         include/Hyper/Prerequisites.hpp
