--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -42,27 +42,6 @@ set(LLVM_LINK_COMPONENTS
 
 llvm_map_components_to_libnames(llvm_libs ${LLVM_LINK_COMPONENTS})
 
-find_library(LLD_COFF NAMES lldCOFF.a liblldCOFF.a lldCOFF.lib PATHS ${LLVM_LIBRARY_DIRS})
-find_library(LLD_COMMON NAMES lldCommon.a liblldCommon.a lldCommon.lib PATHS ${LLVM_LIBRARY_DIRS})
-find_library(LLD_CORE NAMES lldCore.a liblldCore.a lldCore.lib PATHS ${LLVM_LIBRARY_DIRS})
-find_library(LLD_DRIVER NAMES lldDriver.a liblldDriver.a lldDriver.lib PATHS ${LLVM_LIBRARY_DIRS})
-find_library(LLD_ELF NAMES lldELF.a liblldELF.a lldELF.lib PATHS ${LLVM_LIBRARY_DIRS})
-find_library(LLD_MINGW NAMES lldMinGW.a liblldMinGW.a lldMinGW.lib PATHS ${LLVM_LIBRARY_DIRS})
-find_library(LLD_READER_WRITER NAMES lldReaderWriter.a liblldReaderWriter.a lldReaderWriter.lib PATHS ${LLVM_LIBRARY_DIRS})
-find_library(LLD_WASM NAMES lldWasm.a liblldWasm.a lldWasm.lib PATHS ${LLVM_LIBRARY_DIRS})
-find_library(LLD_YAML NAMES lldYAML.a liblldYAML.a lldYAML.lib PATHS ${LLVM_LIBRARY_DIRS})
-
-set(lld_libs
-        ${LLD_COFF}
-        ${LLD_COMMON}
-        ${LLD_CORE}
-        ${LLD_DRIVER}
-        ${LLD_ELF}
-        ${LLD_MINGW}
-        ${LLD_READER_WRITER}
-        ${LLD_WASM}
-        ${LLD_YAML})
-
 #-------------------------------------------------------------------------------------------
 # Hyper
 #-------------------------------------------------------------------------------------------
@@ -145,8 +124,7 @@ target_link_libraries(
         PRIVATE
         ProjectOptions
         ProjectWarnings
-        ${llvm_libs}
-        ${lld_libs})
+        ${llvm_libs})
 target_include_directories(
         hyper
         PRIVATE
