Hyper: Adding lexer & logger
Adding test file to use as reference
Adding logger & formatter for better logging
Adding lexer

--- a/Source/Hyper/CMakeLists.txt
+++ b/Source/Hyper/CMakeLists.txt
@@ -8,18 +8,29 @@
 # Hyper
 #-------------------------------------------------------------------------------------------
 set(SOURCES
-        src/main.cpp)
+        src/main.cpp
+        src/Hyper/Compiler.cpp
+        src/Hyper/Lexer.cpp)
 
 set(HEADERS
-        )
+        include/Hyper/Compiler.hpp
+        include/Hyper/Formatter.hpp
+        include/Hyper/Lexer.hpp
+        include/Hyper/Logger.hpp
+        include/Hyper/Token.hpp)
 
-add_executable(Hyper ${SOURCES} ${HEADERS})
+add_executable(hyper ${SOURCES} ${HEADERS})
 target_link_libraries(
-        Hyper
+        hyper
         PRIVATE
         ProjectOptions
         ProjectWarnings)
 target_include_directories(
-        Hyper
+        hyper
         PUBLIC
         include)
+
+add_custom_command(
+        TARGET hyper
+        POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/tests $<TARGET_FILE_DIR:hyper>/tests)
