Parser: Simplify ast
Adding conditional expression (ternary)
Adding comments
Adding more tests
Changing data type to extra class

--- a/Source/Hyper/CMakeLists.txt
+++ b/Source/Hyper/CMakeLists.txt
@@ -22,6 +22,7 @@ set(SOURCES
         src/Hyper/Ast/Declarations/VariableDeclaration.cpp
         src/Hyper/Ast/Expressions/BinaryExpression.cpp
         src/Hyper/Ast/Expressions/CallExpression.cpp
+        src/Hyper/Ast/Expressions/ConditionalExpression.cpp
         src/Hyper/Ast/Expressions/IdentifierExpression.cpp
         src/Hyper/Ast/Expressions/UnaryExpression.cpp
         src/Hyper/Ast/Literals/BoolLiteral.cpp
@@ -42,9 +43,11 @@ set(HEADERS
         include/Hyper/Logger.hpp
         include/Hyper/Parser.hpp
         include/Hyper/Token.hpp
+        include/Hyper/Type.hpp
         include/Hyper/Ast/AstNode.hpp
         include/Hyper/Ast/Declaration.hpp
         include/Hyper/Ast/Expression.hpp
+        include/Hyper/Ast/Forward.hpp
         include/Hyper/Ast/Literal.hpp
         include/Hyper/Ast/Statement.hpp
         include/Hyper/Ast/Declarations/FunctionDeclaration.hpp
@@ -52,6 +55,7 @@ set(HEADERS
         include/Hyper/Ast/Declarations/VariableDeclaration.hpp
         include/Hyper/Ast/Expressions/BinaryExpression.hpp
         include/Hyper/Ast/Expressions/CallExpression.hpp
+        include/Hyper/Ast/Expressions/ConditionalExpression.hpp
         include/Hyper/Ast/Expressions/IdentifierExpression.hpp
         include/Hyper/Ast/Expressions/UnaryExpression.hpp
         include/Hyper/Ast/Literals/BoolLiteral.hpp
